<resources>
    <string name="app_name">Midnightmares</string>
    <string name="simple_desc_of_app">Simple Description</string>
    <string-array name="product_types_array">
        <item>SHIRTS</item>
        <item>HOODIES</item>
    </string-array>
    <string name="nav_home_title">Home</string>
    <string name="nav_news_title">News Feed</string>
    <string name="nav_orders_title">Orders</string>
    <string name="nav_me_title">Me</string>
    <string name="nav_cart_title">Cart</string>
    <string name="label_or">OR</string>
    <string name="label_category">Category</string>
    <string name="label_browse_products">Browse Products</string>
    <string name="label_address">Addresses</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_change_profile">Change Profile Information</string>
    <string name="label_wish_list">Wish List</string>
    <string name="label_description">Description</string>
    <string name="label_rate">Rating </string>
    <string name="label_reviews">Reviews</string>
    <string name="label_no_reviews_yet">No Reviews Yet.</string>
    <string name="label_guest">Guest</string>
    <string name="label_merchandise_total">Merchandise Total</string>
    <string name="label_merchandise_total_w_colon">Merchandise Total:</string>
    <string name="label_shipping_total">Shipping Total</string>
    <string name="label_no_items_yet">No items yet.</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_email_verification">Verification link has been sent to your email. Please click the link to verify your account and remove this message.</string>
    <string name="label_unverified_warning">Warning: You cannot place order if you are an unverified user.</string>
    <string name="label_selected_birth_date">No Selected Date</string>
    <string name="label_contact_example">(+63) 912 345 6789</string>
    <string name="label_name_example">John Doe</string>
    <string name="label_date_example">11/26/2021 07:11 PM</string>
    <string name="label_title_example">This is a title</string>
    <string name="label_description_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam luctus, elit sed consequat iaculis, tellus dui dapibus sapien, ut malesuada lectus magna rutrum ex. Nulla a vehicula enim, nec ornare purus. Morbi id commodo dolor. Nulla hendrerit posuere dapibus. Nunc condimentum molestie neque et ornare. Duis cursus consequat augue at ultrices. Nullam aliquam lorem nisi, sit amet malesuada nibh commodo sit amet. Sed libero nibh, mattis sit amet condimentum in, lacinia sed risus. Suspendisse ac mauris id nunc tincidunt iaculis eu ut velit. Phasellus accumsan, nibh eu tempor rutrum, nisi elit eleifend ipsum, ut suscipit enim risus quis turpis.</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_registration_instruction">Please enter your information below.</string>
    <string name="label_sizes">Sizes</string>
    <string name="label_unit_number_house_number_building_street_name">Unit number, house number, building, street name</string>
    <string name="label_region_province_city">Region Province City</string>
    <string name="label_no_delivery_address_yet_please_create_one_fab">No Delivery Address Yet. Please Create One By Tapping the + Button below.</string>
    <string name="label_delivery_addresses">Delivery Addresses</string>
    <string name="label_make_default">Make Default</string>
    <string name="label_choose_payment_method">Choose Payment Method</string>
    <string name="label_out_of_stock">(Out Of Stock)</string>
    <string name="label_subscribe_succeeded">Message Subscribed</string>
    <string name="label_subscribe_failed">Message Subscribing Failed</string>
    <string name="label_ph_number_format">(+63)</string>
    <string name="label_total_payment">Total Payment</string>
    <string name="label_loading_please_wait">Loading. Please wait…</string>
    <string name="label_update_information">Update Information</string>
    <string name="label_price">Price:</string>
    <string name="label_size">Size:</string>
    <string name="label_like">Like</string>
    <string name="placeholder_like_description">%1$s %2$d others liked this post.</string>
    <string name="placeholder_comment">Comment (%1$d)</string>
    <string name="label_view_shipping_orders">View Shipping Orders</string>
    <string name="label_view_shipped_orders">View Shipped Orders</string>
    <string name="label_view_for_deliver_orders">View For Delivery Orders</string>
    <string name="label_view_cancelled_orders">View Cancelled Orders</string>
    <string name="label_view_returned_items">View Returned Items</string>
    <string name="label_order_id">Order ID:</string>
    <string name="label_username">Username:</string>
    <string name="label_total_cost">Merchandise Total:</string>
    <string name="label_shipping_fee">Shipping Fee:</string>
    <string name="label_user_agreed_to_shipping_fee">User Agreed To Shipping Fee:</string>
    <string name="label_status">Status:</string>
    <string name="label_number_of_items">Number Of Items:</string>
    <string name="label_date_ordered">Date Ordered:</string>
    <string name="label_additional_note_for_admins">Additional Note For Admins:</string>
    <string name="label_view_completed_orders">View Completed Orders</string>
    <string name="btn_view_items">View Items</string>
    <string name="label_add_new_category">Add New Category</string>
    <string name="label_grand_total">Grand Total:</string>
    <string name="label_delivery_address">Delivery Address</string>
    <string name="label_terms_and_condition">Terms And Conditions</string>
    <string name="label_size_chart">Size Chart</string>
    <string name="label_cancel_reason">Cancel Reason</string>
    <string name="label_agree_to_suggested_shipping_fee">Agree To Suggested Shipping Fee</string>
    <string name="label_order_details">Order Details:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_sub_total">Sub Total:</string>
    <string name="label_date_sold">Date Sold:</string>
    <string name="label_is_exchangeable">Is Exchangeable:</string>
    <string name="label_show_more_reviews">Show All (%1$d) ></string>
    <string name="label_sold">Sold:</string>
    <string name="label_sold_w_format">(%1$d Sold)</string>
    <string name="label_remaining_stock">Remaining Stock:</string>
    <string name="label_please_create_your_first_delivery_address">Please create your first delivery address.</string>
    <string name="img_description">Image Text Placeholder</string>
    <string name="action_view_cart">View Cart</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_sort_best_seller">Sort By Best Seller</string>
    <string name="action_sort_name">Sort By Name</string>
    <string name="action_sort_new">Sort By Date (newest-oldest)</string>
    <string name="rb_credit_debit_card">Credit/Debit Card / Paypal</string>
    <string name="rb_cod">Cash On Delivery (COD)</string>
    <string name="rb_gcash">G-Cash</string>
    <string name="rb_paymaya">Paymaya</string>
    <string name="placeholder_chip_option_1">Option 1</string>
    <string name="placeholder_product_name">Product Name</string>
    <string name="placeholder_long_sentence">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam luctus, elit sed consequat iaculis, tellus dui dapibus sapien, ut malesuada lectus magna rutrum ex.</string>
    <string name="placeholder_very_long_sentence">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam luctus, elit sed consequat iaculis, tellus dui dapibus sapien, ut malesuada lectus magna rutrum ex. Nulla a vehicula enim, nec ornare purus. Morbi id commodo dolor. Nulla hendrerit posuere dapibus. Nunc condimentum molestie neque et ornare. Duis cursus consequat augue at ultrices. Nullam aliquam lorem nisi, sit amet malesuada nibh commodo sit amet. Sed libero nibh, mattis sit amet condimentum in, lacinia sed risus. Suspendisse ac mauris id nunc tincidunt iaculis eu ut velit. Phasellus accumsan, nibh eu tempor rutrum, nisi elit eleifend ipsum, ut suscipit enim risus quis turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam luctus, elit sed consequat iaculis, tellus dui dapibus sapien, ut malesuada lectus magna rutrum ex. Nulla a vehicula enim, nec ornare purus. Morbi id commodo dolor. Nulla hendrerit posuere dapibus. Nunc condimentum molestie neque et ornare. Duis cursus consequat augue at ultrices. Nullam aliquam lorem nisi, sit amet malesuada nibh commodo sit amet. Sed libero nibh, mattis sit amet condimentum in, lacinia sed risus. Suspendisse ac mauris id nunc tincidunt iaculis eu ut velit. Phasellus accumsan, nibh eu tempor rutrum, nisi elit eleifend ipsum, ut suscipit enim risus quis turpis.</string>
    <string name="placeholder_faqs">Question 1 = Answer 1\nQuestion 1 = Answer 1\nQuestion 1 = Answer 1\nQuestion 1 = Answer 1\nQuestion 1 = Answer 1\nQuestion 1 = Answer 1\nQuestion 1 = Answer 1\nQuestion 1 = Answer 1\nQuestion 1 = Answer 1\nQuestion 1 = Answer 1</string>
    <string name="test_address">#300 11th Avenue Justice Lourdes Paredes Cubao Quezon City \nQuezon City, Metro Manila, Metro Manila, 1109</string>
    <string name="default_text">Default</string>
    <string name="add_new_delivery_information">Add New Delivery Information</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="hint_phone_number_edt">(+63) Phone Number</string>
    <string name="label_region">Region</string>
    <string name="hint_region_select">Region ></string>
    <string name="label_province">Province</string>
    <string name="hint_province_select">Province ></string>
    <string name="label_city">City</string>
    <string name="hint_city_select">City ></string>
    <string name="label_postal_code">Postal Code</string>
    <string name="label_detailed_address">Detailed Address</string>
    <string name="btn_set_as_default_address">Set As Default Address</string>
    <string name="btn_delete_address">Delete Address</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_date_picker">Pick Birth Day</string>
    <string name="btn_send_verification">Send verification</string>
    <string name="btn_continue_to_app">Continue To App</string>
    <string name="btn_place_order">Place Order</string>
    <string name="btn_change_address">Change Address</string>
    <string name="btn_change_payment_method">Change</string>
    <string name="btn_check_out">Check Out</string>
    <string name="btn_add_to_cart">Add To Cart</string>
    <string name="btn_share">Share</string>
    <string name="btn_wish">Wish</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_label_register">Register</string>
    <string name="menu_add_new_product">Add New Product</string>
    <string name="menu_actions">Actions</string>
    <string name="action_get_by_shipping">By Shipping</string>
    <string name="action_get_by_shipped">By Shipped</string>
    <string name="action_get_by_delivery">By Delivery</string>
    <string name="action_get_by_completed">By Completed</string>
    <string name="action_get_by_returned">By Returned</string>
    <string name="action_get_by_cancelled">By Cancelled</string>
    <string name="hint_set_full_name">Set Full Name</string>
    <string name="hint_set_phone_number">Set Phone Number</string>
    <string name="hint_set_postal_code">Set Postal Code</string>
    <string name="hint_set_detailed_address">Set Detailed Address</string>
    <string name="menu_category">Category</string>
    <string name="menu_product">Product</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_order">Order</string>
</resources>