<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        android:visible="false"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_no_sort"
                android:title="@string/action_sort_name" />

            <item
                android:id="@+id/action_sort_best_seller"
                android:title="@string/action_sort_best_seller" />

            <item
                android:id="@+id/action_sort_by_new"
                android:title="@string/action_sort_new" />
        </menu>

    </item>

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/action_view_cart"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_actions"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:targetApi="o">

        <menu>
            <item
                android:id="@+id/action_new_product"
                android:title="@string/menu_add_new_product" />
        </menu>

    </item>

</menu>