<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.client.addeditdeliveryinfo.AddEditDeliveryInformationFragment">

    <RelativeLayout
        android:id="@+id/rlFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_full_name"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:hint="@string/hint_set_full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="35"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlFullName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone_number"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ph_number_format"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPhoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:hint="@string/hint_set_phone_number"
                android:inputType="number"
                android:maxLength="10"
                tools:ignore="Autofill,TextFields" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlPhoneNo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_region"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edtRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:hint="@string/hint_region_select"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlProvince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlRegion">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_province"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edtProvince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:hint="@string/hint_province_select"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlProvince">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_city"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edtCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:hint="@string/hint_city_select"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlCity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_postal_code"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:hint="@string/hint_set_postal_code"
            android:inputType="number"
            android:maxLength="7"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:ignore="Autofill,RelativeOverlap" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rlDetailedAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlPostalCode">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_detailed_address"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unit_number_house_number_building_street_name"
            android:textAppearance="?attr/textAppearanceBody2" />

        <EditText
            android:id="@+id/edtDetailedAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_set_detailed_address"
            android:inputType="textLongMessage"
            android:maxLines="3"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:ignore="Autofill" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlMakeDefaultAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlDetailedAddress">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_set_as_default_address"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDefaultAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDeleteAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_border"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlMakeDefaultAddress"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_delete_address"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/btn_submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlDeleteAddress"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>